--- a/twitter_sentiment/templates/tweet_search/home.html
+++ b/twitter_sentiment/templates/tweet_search/home.html
@@ -2,25 +2,36 @@
 
 {% block Body %}
 
-    <div class="textblock">
-        <h2><span class="icon-twitter blue"></span> Sentiment Tool</h2>
+<div class="textblock">
+    <h2><span class="icon-twitter blue"></span> Sentiment Tool</h2>
 
-        <p>Yet another way to search sentiment and opinions on brands or products. Enter a query below
-        to search for <span class="positive">positive</span> and
-            <span class="negative">negative</span>   opinions.</p>
+    <p>Yet another way to search sentiment and opinions on brands or products. Enter a query below
+    to search for <span class="positive">positive</span> and
+        <span class="negative">negative</span>   opinions.</p>
+</div>
+
+<div class="row">
+    <div class="large-10 columns">
+        <input id="search-input" placeholder="E.g Microsoft..."/>
     </div>
 
-    <div class="row">
-        <div class="large-10 columns">
-            <input id="search-input" placeholder="E.g Microsoft..."/>
-        </div>
-
-        <div class="large-2 columns">
-            <a id="search-btn" class="large button expand">
-                <span class="icon-search icon-2x"></span>
-            </a>
-        </div>
+    <div class="large-2 columns">
+        <a id="search-btn" class="large button expand">
+            <span class="icon-search icon-2x"></span>
+        </a>
     </div>
+</div>
+
+<div id="alert-info" data-alert class="alert-box round alert-info">
+    <span></span>
+    <a href="#" class="close">&times;</a>
+</div>
+
+
+<div id="alert-error" data-alert class="alert-box round alert-error">
+    <span></span>
+    <a href="#" class="close">&times;</a>
+</div>
 
 
 <div id="tabs" class="section-container vertical-tabs hidden" data-section="vertical-tabs">
@@ -32,8 +43,13 @@
     </section>
     <section>
         <p class="title" data-section-title><a href="#">Statistics</a></p>
-        <div class="content" data-section-content>
-            <p>Content of section 2.</p>
+        <div id="div-stats" class="content" data-section-content>
+            <p><i class="icon-smile icon-large positive"></i> :
+                <span id="positive-count" class="positive">24</span>
+                <i class="icon-meh icon-large neutral"></i> :
+                <span id="neutral-count" class="neutral">24</span>
+                <i class="icon-frown icon-large negative"></i> :
+                <span id="negative-count" class="negative">24</span></p>
         </div>
     </section>
     <section>
@@ -61,15 +77,53 @@
 </script>
 
 <script>
+    function ShowAlert(alert_id, message){
+        $('#'+alert_id+' > span').text(message);
+        var div = $('#'+alert_id);
+        div.show();
+        var hide_div = function(){div.hide();}
+        return hide_div;
+    }
+
+    function ShowInfo(message){
+        return ShowAlert('alert-info', message);
+    }
+
+    function ShowError(message){
+        return ShowAlert('alert-error', message);
+    }
+
+    $(function(){
+        var opts = {
+            lines: 13, length: 35, width: 8, radius: 32,
+            corners: 1, rotate: 0, direction: 1, color: '#bdc3c7',
+            speed: 1, trail: 60, shadow: false, hwaccel: false,
+            className: 'spinner', zIndex: 15, top: 0, left: 0
+        };
+        var target = document.getElementById('spinner');
+        var spinner = new Spinner(opts).spin(target);
+    })
+</script>
+
+<script>
+    function ShowStats(counts){
+        $('#positive-count').text(counts.positive);
+        $('#negative-count').text(counts.negative);
+        $('#neutral-count').text(counts.neutral);
+    }
+
     function ShowTweets(tweets){
+        var counts = {positive: 0, neutral: 0, negative: 0}
         var container = $('#div-tweets');
         container.empty();
         for(var i = 0, l = tweets.length; i < l; i++){
             var tweet = tweets[i];
+            counts[tweet.label]++;
             var tweet_node = '<div class="tweet ' + tweet.label + ' ">' +
                     '<p>' + tweet.text + '</p></div>';
             container.append(tweet_node);
         }
+        ShowStats(counts);
     }
 
     var clicked = false;
@@ -89,6 +143,7 @@
 
         tabs.hide();
         spinner.show();
+        var hide_info = ShowInfo('Wait... It could take some time')
         $.ajax({
             type: 'GET',
             url: '/search_tweets',
@@ -98,6 +153,10 @@
                 ShowTweets(tweets);
                 spinner.hide();
                 tabs.show();
+                hide_info();
+            },
+            error: function(data){
+                ShowError('Something went wrong... Please, retry later')
             }
         });
     }
