--- a/twitter_sentiment/tweet_search/static/css/style.css
+++ b/twitter_sentiment/tweet_search/static/css/style.css
@@ -30,11 +30,7 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.2125em;
 }
 
-#div-stats > p {
-    font-size: 36px;
-    font-family: 'Open Sans', sans-serif;
-    color: #222222;
-}
+
 
 /*-------------------------/TYPOGRAPHY-------------------------------------*/
 
@@ -116,6 +112,12 @@ h1, h2, h3, h4, h5, h6 {
     overflow-y: auto;
 }
 
+/*-------------------------/TABS-------------------------------------*/
+
+
+/*-------------------------TWEETS-------------------------------------*/
+
+
 .tweet > p {
     color: #ffffff;
     margin: 10px;
@@ -138,7 +140,29 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #2ecc71;
 }
 
-/*-------------------------/TABS-------------------------------------*/
+/*-------------------------/TWEETS-------------------------------------*/
+
+
+/*-------------------------STATISTICS-------------------------------------*/
+
+#statistics p {
+    font-size: 36px;
+    font-family: 'Open Sans', sans-serif;
+    color: #222222;
+    margin-bottom: -5px;
+}
+
+#statistics > svg {
+    float: left;
+}
+
+#counts {
+    float: left;
+    margin-top: 60px;
+    margin-left: 60px;
+}
+
+/*-------------------------STATISTICS-------------------------------------*/
 
 
 /*-------------------------STUFF-------------------------------------*/
