Added word cloud

--- a/twitter_sentiment/templates/tweet_search/home.html
+++ b/twitter_sentiment/templates/tweet_search/home.html
@@ -48,8 +48,7 @@
     </section>
     <section>
         <p class="title" data-section-title><a href="#">Summary</a></p>
-        <div class="content" data-section-content>
-            <p>Content of section 3.</p>
+        <div id="summary" class="content" data-section-content>
         </div>
     </section>
 </div>
