--- a/twitter_sentiment/templates/tweet_search/scripts.html
+++ b/twitter_sentiment/templates/tweet_search/scripts.html
@@ -5,6 +5,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/spin.js/1.2.7/spin.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.1.6/d3.min.js"></script>
+<script src="/static/js/d3.layout.cloud.js"></script>
 
 <script>
     $(document).foundation();
