--- a/twitter_sentiment/templates/tweet_search/home.html
+++ b/twitter_sentiment/templates/tweet_search/home.html
@@ -49,6 +49,8 @@
     <section>
         <p class="title" data-section-title><a href="#">Summary</a></p>
         <div id="summary" class="content" data-section-content>
+            <p class="positive"> </p>
+            <p class="negative"> </p>
         </div>
     </section>
 </div>
